# Machine-Learning

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
ml/: base.py  validation.py
ml/decomposition/: pca.py
ml/linear_model/: linear_regression.py
ml/metrics/: regression.py  regresssion.py
ml/regression/: linear_regression.py
ml/stats/: correlation.py  hypotests.py
regression/: linear_regression.py
tests/: linear_regression_test.py  test_validation.py  validation_test.py
tests/decomposition/: test_pca.py
tests/linear_model/: linear_regression_test.py  test_linear_regression.py
tests/regression/: linear_regression_test.py
tests/stats/: test_hypotests.py
