[tool.poetry]
name = "ml"
version = "0.1.0"
description = "A introduction to machine learning that focuses on the understanding of the algorithms instead of efficiency"
authors = ["Moritz Mistol <moritz.mistol@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/MoritzM00/Machine-Learning"

[tool.poetry.dependencies]
python = "^3.8,<3.10"
numpy = "*"
scikit-learn="1.0.1"
scipy="1.7.3"

[tool.poetry.dev-dependencies]
pytest = "*"
pre-commit = "*"
black = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
